--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- MAIN CONTAINER -->
     <div id="main-container">
+        <h1>Caesar Cipher Program</h1>
 
         <!-- ENCRYPT CONTAINER -->
             <div id="encrypt-container-main">
