Encrypt form input clear action

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -119,7 +119,8 @@
             });
 
             $("#encrypt-clear-button").on("click", (e) => {
-                console.log("BUTTON CLICKED");
+                e.preventDefault();
+                $("#encrypt-input-text").val('');
             })
         });
     </script>
