--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: sans-serif;
+}
+
 #main-container {
     display: flex;
     flex-direction: column;
@@ -43,6 +47,10 @@ button {
     margin: 10px;
     width: 100px;
     height: 30px;
+    background-color: white;
+    color: black;
+    border: 2px solid green;
+    border-radius: 4px;
 }
 
 label {
@@ -51,10 +59,40 @@ label {
 
 input {
     margin: 10px;
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+
+input[type=number]:focus {
+    border: 3px solid #555;
 }
 
 .form-actions {
     display: flex;
     gap: 10px;
     justify-content: center;
+}
+
+#encrypt-container-output {
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 75px;
+}
+
+#decrypt-container-output {
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 75px;
+}
+
+#encrypt-response-holder {
+    display: flex;
+    flex-direction: column;
+}
+
+#decrypt-response-holder {
+    display: flex;
+    flex-direction: column;
 }
