--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -36,7 +36,7 @@
                 <div id="encrypt-container-output">
                     <div id="encrypt-response-holder">
                         <label for="encrypt-response-area">Encrypted results:</label>
-                        <textarea name="encrypt-response-area" id="encrypt-response-area" cols="50" rows="10"></textarea>
+                        <textarea name="encrypt-response-area" id="encrypt-response-area" cols="50" rows="10" placeholder="result..." readonly></textarea>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                  <div id="decrypt-container-output">
                     <div id="decrypt-response-holder">
                         <label for="decrypt-response-area">Decrypted results:</label>
-                        <textarea name="decrypt-response-area" id="decrypt-response-area" cols="50" rows="10"></textarea>
+                        <textarea name="decrypt-response-area" id="decrypt-response-area" cols="50" rows="10" placeholder="result..." readonly></textarea>
                     </div>
                  </div>
             </div>
